# muxboard

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  config.example.json  justfile  muxboard.tmux
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: agent-loop-notes.md  agent-view-audit.md  codex-autopass-prompt.md  demo.md  index.html  opensessions-gap-audit.md  provider-drift.md  release.md  testing-matrix.md  theme-audit.md  tmux-plugin.md  ui-reboot.md
docs/goals/: README.md  agent-view.md  competitive-hardening.md  demo-polish.md
extras/tmux/scripts/: muxboard-agent-state  muxboard-codex-notify  muxboard-mark-seen  muxboard-open  muxboard-plugin-smoke  muxboard-session-dots  muxboard-status
scripts/: codex-goal-send  competitive-hardening-loop  demo-session  demo-visuals
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  metrics.rs  notifications.rs  paths.rs  state.rs  tui.rs
src/app/: attention.rs  presentation.rs  targets.rs  tests.rs
src/core/: agent_sources.rs  inference.rs  mod.rs  model.rs  progress.rs  providers.rs  reports.rs  runtime.rs  tests.rs
src/tmux/: control.rs  mod.rs
tests/: architecture_guards.rs  cli_smoke.rs  live_e2e.rs
tests/fixtures/app/: panels.json  view_models.json
tests/fixtures/core/: provider_contracts.json  runtime_streams.json
tests/fixtures/tui/golden/: actions_overlay.txt  command_center_from_working_selection.txt  (+21 more)
