[package]
name = "muxboard"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
description = "A tmux command center for AI agents, panes, and long-running terminal work."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/aanari/muxboard"
homepage = "https://github.com/aanari/muxboard"
documentation = "https://github.com/aanari/muxboard/tree/main/docs"
keywords = ["tmux", "terminal", "tui", "agents", "cli"]
categories = ["command-line-utilities"]
# V1 ships GitHub-first. Remove this only when crates.io publishing is intentional.
publish = false
exclude = [
    "docs/agent-loop-notes.md",
    "docs/codex-autopass-prompt.md",
]

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
